# ffi-boilerplate

./: README.md
R/src/rust/: Cargo.toml
installer/: Cargo.toml  README.md
pyo3_built/: Makefile.toml  README.md  pyproject.toml
pyo3_built/builtpy/: wrapper.py
pyo3_built/builtpy/core/: __init__.py  corewasm.wasm
pyo3_built/corepyo3/: Cargo.toml  Makefile.toml
pyo3_built/corepyo3/src/: lib.rs
pyo3_built/corewasm/: Cargo.toml
pyo3_built/corewasm/src/: lib.rs
pyo3_built/examples/: main.py
tests/: example.qmd
